Increase page size to 20 items + a bit of polishing

--- a/app/templates/inbox/mixin/advanced-scoring-tool.jinja
+++ b/app/templates/inbox/mixin/advanced-scoring-tool.jinja
@@ -12,7 +12,7 @@
 
     <tbody>
         <tr>
-            <td>
+            <td class="p-4">
                 <label for="{{ const.http.param.ast.SALARY }}">
                     Salary importance
                 </label>
@@ -27,7 +27,7 @@
                     style="width: 100%">
             </td>
 
-            <td>
+            <td class="p-4">
                 <label for="{{ const.http.param.ast.EXPERIENCE }}">
                     Experience importance
                 </label>
@@ -44,7 +44,7 @@
         </tr>
 
         <tr>
-            <td>
+            <td class="p-4">
                 <label for="{{ const.http.param.ast.SKILLS }}">
                     Skills importance
                 </label>
@@ -60,7 +60,7 @@
                     style="width: 100%">
             </td>
 
-            <td>
+            <td class="p-4">
                 <label for="{{ const.http.param.ast.ENGLISH }}">
                     English level importance
                 </label>
