--- a/app/templates/inbox/mixin/single-chat.jinja
+++ b/app/templates/inbox/mixin/single-chat.jinja
@@ -27,22 +27,25 @@
                             %}
 							    <div class="text-secondary">
 								    <div>
-									    <span class="badge bg-{{
+									    <span title="The Job caps the salary at ${{ j_sal }}"
+                                            class="badge bg-{{
                                              'success' if c_sal <= j_sal else 
-                                             'warning' if c_sal <= j_sal - min(0.7 * j_sal, 500) else 'danger'
+                                             'warning' if c_sal <= j_sal - max(0.7 * j_sal, 500) else 'danger'
                                         }}">
                                             ${{ candidate.salary_min }}
                                         </span>
 
-                                        <span class="badge bg-{{
+                                        <span title="The Job requires {{ j_exp }} years of experience"
+                                            class="badge bg-{{
                                              'success' if c_exp >= j_exp else
-                                             'warning' if c_exp >= j_exp - min(0.7 * j_exp, 0.5) else 'danger'
+                                             'warning' if c_exp >= j_exp - max(0.7 * j_exp, 0.5) else 'danger'
                                         }}">
                                             {{ candidate.experience_years }} years of experience
                                         </span>
 								    </div>
 								    <div>
-                                        <span class="badge bg-{{
+                                        <span title="The Job requires {{ thread.job.get_english_level_display() }} level of English"
+                                            class="badge bg-{{
                                              'success' if c_eng >= j_eng else
                                              'warning' if c_eng >= j_eng - 1 else 'danger'
                                         }}">
