Show only Jobs with MessageThreads in the dropdown menu

--- a/app/templates/inbox/mixin/advanced-scoring-tool.jinja
+++ b/app/templates/inbox/mixin/advanced-scoring-tool.jinja
@@ -2,7 +2,7 @@
 <p class="text-secondary">This feature allows you to see more relevant Candidates easier. Just choose how to treat different aspects of their profiles or how the profiles match the Job description by specifying weights for each parameter.</p>
 
 <!-- AST- prefix stands for Advanced Sorting Tool -->
-<table class="table table-hover table-striped"
+<table class="table table-hover"
     style="width: 100%; vertical-align: middle">
 
     <colgroup>
