--- a/app/templates/inbox/mixin/single-chat.jinja
+++ b/app/templates/inbox/mixin/single-chat.jinja
@@ -30,17 +30,17 @@
 									    <span title="The Job caps the salary at ${{ j_sal }}"
                                             class="badge bg-{{
                                              'success' if c_sal <= j_sal else 
-                                             'warning' if c_sal <= j_sal - max(0.7 * j_sal, 500) else 'danger'
+                                             'warning' if c_sal <= j_sal + max(0.3 * j_sal, 500) else 'danger'
                                         }}">
                                             ${{ candidate.salary_min }}
                                         </span>
 
-                                        <span title="The Job requires {{ j_exp }} years of experience"
+                                        <span title="The Job requires {{ j_exp }} year(s) of experience"
                                             class="badge bg-{{
                                              'success' if c_exp >= j_exp else
-                                             'warning' if c_exp >= j_exp - max(0.7 * j_exp, 0.5) else 'danger'
+                                             'warning' if c_exp >= j_exp - max(0.3 * j_exp, 0.5) else 'danger'
                                         }}">
-                                            {{ candidate.experience_years }} years of experience
+                                            {{ candidate.experience_years }} year(s) of experience
                                         </span>
 								    </div>
 								    <div>
