--- a/app/templates/inbox/chats.html
+++ b/app/templates/inbox/chats.html
@@ -2,11 +2,19 @@
 {% block content %}
     <div class="container pt-3">
         <h1 class="mb-3">Inbox</h1>
-
+        <div class="btn-group">
+            <button type="button" class="btn btn-secondary dropdown-toggle bg-light text-secondary"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" onclick="">
+                Sort: {{ sort }}
+            </button>
+            <div class="dropdown-menu text-secondary">
+                <a class="dropdown-item text-secondary" href=".">Most recent</a>
+                <a class="dropdown-item text-success" href=".?sort=relevant">[NEW] Most relevant</a>
+            </div>
+        </div>
         {% for thread, score in scored_threads %}
             {% set last_message = thread.last_message %}
             {% set candidate = thread.candidate %}
-
             <div id="thread-{{ thread.id }}" class="card mb-4">
                 <div class="card-body">
                     <div class="row">
@@ -38,14 +46,14 @@
                                                 {{ candidate.country_code }}{% if candidate.location %},
                                                     {{ candidate.location }}{% endif %}
                                             </div>
-                                            <div class="job-additional-info--title">
-                                                {% if score > 0.9 %}
+                                            <div class="candidate-badge">
+                                                {% if score >= 0.95 %}
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                          fill="red" class="bi bi-fire" viewBox="0 0 16 16">
                                                         <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z"></path>
                                                     </svg>
                                                     <span class="job-additional-info--title-text">Hot candidate</span>
-                                                {% elif score >= 0.7 and score <= 0.9 %}
+                                                {% elif score >= 0.79 %}
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                          fill="green" class="bi bi-check-circle" viewBox="0 0 16 16">
                                                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
@@ -84,7 +92,9 @@
                             <small class="text-secondary">
                                 {{ last_message.created|date('d.m.Y') }}
                             </small>
-                            <small class="{% if score >= 0.7 %}text-success{% elif score >= 0.5 %}text-warning{% else %}text-danger{% endif %}">
+                            <small class="{% if score >= 0.7 %}text-success{% elif score >= 0.5 %}text-warning{% else %}text-danger{% endif %}"
+                                   data-toggle="tooltip" data-placement="top"
+                                   title="Djinni Thread Score: This parameter measures a candidate's relevance to the job vacancy, ranging from 0 to 10. It helps assess how closely a candidate matches the requirements of the vacancy.">
                                 {{ "{:.2f}".format(score * 10) }}
                             </small>
                         </div>
