custom category weights test

--- a/app/templates/inbox/chats.html
+++ b/app/templates/inbox/chats.html
@@ -42,7 +42,7 @@
 							</small>
 							<strong>Suitability:</strong>
 							<small class="text-secondary">
-								{{ thread.candidate_suitability }} / 6
+								{{ thread.candidate_suitability }}
 							</small>
 						</div>
 					</div>
