https://www.loom.com/share/02fcd48bd4aa46f6b20216c52a826b28?sid=7a22c415-f02a-4a6e-9439-84068bdd2831 у відео забув додати що що можна зробити для другої версії тож для другої версії можна: 1 додати можливість сортувати по окремим метрикам 2 розширити кількість метрик для більш точної оцінки 3 замінити лінк на більш гарні іконки чи можливо на дропдаун
для релізу:
більш детально попрацювати над фронтендом
додати тести і детально проаналізувати коефіцієнти для більш точної оцінки

--- a/app/templates/inbox/chats.html
+++ b/app/templates/inbox/chats.html
@@ -3,7 +3,9 @@
 {% block content %}
 	<div class="container pt-3">
 		<h1 class="mb-3">Inbox</h1>
-
+        <div class="row" align="right">
+                <a href="{{ url('sort_by_score') }}">Sort by candidate score</a>
+        </div>
 		{% for thread in threads %}
 			{% set last_message = thread.last_message %}
 			{% set candidate = thread.candidate %}
