--- a/app/templates/plots/plot.html
+++ b/app/templates/plots/plot.html
@@ -6,6 +6,17 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
+<div class="row">
+    <div class="col-sm-2">
+
+            <p>Job</p>
+
+            <p>{{job_long_description}}</span>.</p>
+
+    </div>
+
+	<div class="col-sm-8">
+
     <div id="scatter-plot" style="width: 100%; height: 100vh;"></div>
 
     <script>
@@ -29,7 +40,7 @@
         var layout = {
             scene: {
                 camera: {
-                    eye: { x: 1.87, y: 0.88, z: -0.64 },
+                    eye: { x: -1, y: 0, z: -0.64 },
                 },
             },
             width: window.innerWidth,
@@ -47,6 +58,14 @@
             });
         });
 
+
+
     </script>
+    </div>
+
+
+
+</div>
+
 </body>
 {% endblock content %}
