--- a/app/templates/inbox/chats.html
+++ b/app/templates/inbox/chats.html
@@ -1,65 +1,100 @@
 {% extends "base.html" %}
-
 {% block content %}
 	<div class="container pt-3">
-		<h1 class="mb-3">Inbox</h1>
+		<div class="row">
+			<div class="col-9">
+			<h1 class="mb-3">Inbox</h1>
+			{% for thread in threads %}
+				{% set last_message = thread.last_message %}
+				{% set candidate = thread.candidate %}
 
-		{% for thread in threads %}
-			{% set last_message = thread.last_message %}
-			{% set candidate = thread.candidate %}
-
-			<div id="thread-{{ thread.id }}" class="card mb-4">
-				<div class="card-body">
-					<div class="row">
-						<div class="col-sm-3">
-							<div class="row">
-								<div class="col-auto">
-								{% if thread.is_anonymous or not thread.candidate.picture_url %}
-										<img class="rounded-circle" width="30px" height="30px" style="object-fit: cover" src="https://p.djinni.co/static/i/default-userpic@2x.png" alt="">
-								{% else %}
-										<img class="rounded-circle" width="30px" height="30px" style="object-fit: cover" src="{{ thread.candidate.picture_url }}" alt="">
-								{% endif %}
-								</div>
-								<div class="col">
-									<small>
-										{% if thread.is_anonymous %}
-											<div>{{ candidate.position }}</div>
-										{% else %}
-											<div>{{ candidate.name }}</div>
-										{% endif %}
-										<div class="text-secondary">
-											<div>
-												${{ candidate.salary_min }}, {{ candidate.experience_years }} years of experience,
+				<div id="thread-{{ thread.id }}" class="card mb-4">
+					<div class="card-body">
+						<div class="row">
+							<div class="col-sm-3">
+								<div class="row">
+									<div class="col-auto">
+									{% if thread.is_anonymous or not thread.candidate.picture_url %}
+											<img class="rounded-circle" width="30px" height="30px" style="object-fit: cover" src="https://p.djinni.co/static/i/default-userpic@2x.png" alt="">
+									{% else %}
+											<img class="rounded-circle" width="30px" height="30px" style="object-fit: cover" src="{{ thread.candidate.picture_url }}" alt="">
+									{% endif %}
+									</div>
+									<div class="col">
+										<small>
+											{% if thread.is_anonymous %}
+												<div>{{ candidate.position }}</div>
+											{% else %}
+												<div>{{ candidate.name }}</div>
+											{% endif %}
+											<div class="text-secondary">
+												<div>
+													${{ candidate.salary_min }}, {{ candidate.experience_years }} years of experience,
+												</div>
+												<div>
+													{{ candidate.english_level }}, {{ candidate.country_code }}{% if candidate.location %}, {{ candidate.location }}{% endif %}
+												</div>
+												<div>
+													{% if thread.total_score is defined %}
+													<h5>Candidate Score: <span class="badge bg-dark">{{ '%0.3f' |format(thread.total_score|float)}}</span></h5>
+													<div class="vstack gap-3 border">
+														<div>Salary score: {{ '%0.3f' |format(thread.salary_score|float)}}</div>
+														<div>Experience score: {{ '%0.3f' |format(thread.experience_score|float)}}</div>
+														<div>English score: {{ '%0.3f' |format(thread.english_level_score|float)}}</div>
+														<div>Skills score: {{ '%0.3f' |format(thread.skills_match_score|float)}}</div>
+													</div>
+													{% endif %}
+												</div>
 											</div>
-											<div>
-												{{ candidate.english_level }}, {{ candidate.country_code }}{% if candidate.location %}, {{ candidate.location }}{% endif %}
-											</div>
-										</div>
-									</small>
+										</small>
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-sm">
-							<header><strong>{{ thread.job.position }}</strong></header>
-							<div>
-								{% if last_message.action in ['apply', 'accept'] %}
-									<div>Candidate opened contacts</div>
-								{% endif %}
-								{% if last_message.body %}
-									{{ last_message.body|truncate(100) }}
-								{% endif %}
-								
+							<div class="col-sm">
+								<header><strong>{{ thread.job.position }}</strong></header>
+								<div>
+									{% if last_message.action in ['apply', 'accept'] %}
+										<div>Candidate opened contacts</div>
+									{% endif %}
+									{% if last_message.body %}
+										{{ last_message.body|truncate(100) }}
+									{% endif %}
+								</div>
+								<a href="{{ url('inbox_thread', thread.id) }}"><small>Open thread</small></a>
+								<div>
+									{% if thread.skills is defined and thread.skills %}
+										{% for skill in thread.skills %}
+											{% if skill in thread.required_skills %}
+												<span class="text-danger">{{skill}}</span>
+											{% else %}
+												<span class="text-secondary">{{skill}}</span>
+											{% endif %}
+										{% endfor %}
+									{% endif %}
+								</div>
 							</div>
-							<a href="{{ url('inbox_thread', thread.id) }}"><small>Open thread</small></a>
-						</div>
-						<div class="col-sm-auto">
-							<small class="text-secondary">
-								{{ last_message.created|date('d.m.Y') }}
-							</small>
+							<div class="col-sm-auto">
+								<small class="text-secondary">
+									{{ last_message.created|date('d.m.Y') }}
+								</small>
+							</div>
 						</div>
 					</div>
 				</div>
+			{% endfor %}
 			</div>
-		{% endfor %}
+			<div class="col-3 g-4">
+				<div class="container sticky-top text-left border">
+					<form role="search" action="#" method="post" novalidate>
+						{% csrf_token %}
+						{{thread_form.as_p()}}
+						<div class="submit-row">
+							<input type="submit" value="Submit" name="submit" class="btn btn-primary"/>
+							<input type="submit" value="Reset" name="reset" class="btn btn-light"/>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
 	</div>
 {% endblock content %}
